@@ -15,6 +15,7 @@ H_FILES = ../../shared/console/consoleIo.h ../../shared/console/keyboard.h \
 OBJS = $(C_O_FILES)
 
 include $(RTEMS_ROOT)/make/custom/@RTEMS_BSP@.cfg
+include $(top_srcdir)/../../../../../../automake/compile.am
 include $(top_srcdir)/../../../../../../automake/lib.am
 
 #
