@@ -1,3 +1,11 @@
+
+	* Makefile.am: ACLOCAL_AMFLAGS= -I $(RTEMS_TOPdir)/macros.
+        Switch to GNU canonicalization.
+
+2000-09-29	Charles-Antoine Gauthier <charles.gauthier@nrc.ca>
+
+	* startup/linkcmds: Added lines so DWARF debug information
+	would be available.  Otherwise gdb complains that the offsets
 	for the debug info are incorrect and doesn't load the files.
 
 2000-09-04	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
